feat: add new style and correct errors old release

--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 
             <section class="section" id="skills">
                 <h2 class="sectionTitle">Skills</h2>
-
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS/SASS</li>
-                    <li>Git</li>
-                    <li>С# (Basic)</li>
-                </ul>
+                <div class="blockStructure contactsItem">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS/SASS</li>
+                        <li>Git</li>
+                        <li>С# (Basic)</li>
+                    </ul>
+                </div>
             </section>
             <section class="section" id="code">
                 <h2 class="sectionTitle">Code Example</h2>
@@ -70,12 +71,12 @@
         } else if (passUser == '' || passUser == null) { <Br>
             alert('отменено') <Br>
         } else { <Br>
-            alert('Я вас не знаю') <Br>
+            alert('Я вас не знаю') 
         } <Br>
     } else if (loginUser == '' || loginUser == null) { <Br>
         alert('отменено') <Br>
     } else { <Br>
-        alert("Я вас не знаю!") <Br>
+        alert("Я вас не знаю!")
     } <Br>
     </code></p>
             </section>
